Java8 conversions in AlexaUtils